<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/blankFragmentOne"
        android:icon="@drawable/ic_search_24px"
        android:title="Search" />



    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_data_usage_24px"
        android:title="Stats" />
</menu>